--- a/src/components/styles/card.css
+++ b/src/components/styles/card.css
@@ -17,8 +17,8 @@
   align-items: center;
   flex-direction: column;
   width: 15.5rem auto;
-  height: 15rem;
-  background: #172A45;
+  height: 20rem;
+  background: #001f47;
   box-shadow: 0 10px 20px rgba(0, 0, 0, 0.19), 0 6px 6px rgba(0, 0, 0, 0.23);
   border-radius: 10px;
   margin: auto;
@@ -29,27 +29,30 @@
 
 .card--avatar {
   width: 100%;
-  height: 55%;
+  height: 70%;
   object-fit: cover;
 }
 
 .card--title {
-  color: #CCD6F6;
+  color: rgb(255, 255, 255);
   font-weight: 200;
   text-transform: capitalize;
-  font-size: 1.1rem;
-  font-family: 'Source Code Pro', monospace;
+  font-size: 1rem;
+  font-family: "Nunito", sans-serif;
   /* margin-top: 0.5rem; */
 }
 
 .card--link {
   text-decoration: none;
-  /* background: darkorange; */
-  background: rgb(255, 6, 89);
   color: rgb(255, 255, 255);
   padding: 0.3rem 1rem;
-  font-family: 'Source Code Pro', sans-serif;
-  border-radius: 20px;
+  font-family: "Nunito", sans-serif;
+  border-radius: 8px;
+  background-color: #001f47;
+  border: 1px solid  rgb(255, 255, 255);
+}
+.card--link:hover{
+  border: 2px solid  rgb(255, 197, 6);
 }
 
 b{
